--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -80,6 +80,7 @@
     padding-left: 0;
     padding-right: 0;
     display: block;
+    margin-bottom: 8px;
   }
 
   .btn-group.btn-block {
